<resources>
    <string name="app_name">Tourist In London</string>
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_email">E-mail Address</string>
    <string name="reg_confirm_email">Confirm E-mail Address</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_button">Register</string>
    <string name="login">Sign In</string>
    <string name="login_register">Need an account? Click here to register!</string>
    <string name="login_anonymously">Login Anonymously</string>
    <string name="choose">Choose one  category: </string>
    <string name="museums">Museums</string>
    <string name="parks">Parks and Nature</string>
    <string name="attractions">Attractions</string>
    <string name="other_activities">Other Activities</string>
    <string name="anonymous">Loged In Anonymously</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="email_address">Email Address </string>
    <string name="Password">Password</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="change_picture">Change Profile Picture</string>
    <string name="reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="reviewed_by">reviewed by</string>
    <string name="create_review_stars">Stars</string>
    <string name="write_review">Write your review</string>
    <string name="submit">Submit</string>
    <string name="book">Book Tour</string>
    <string-array name="settings">

        <item>Categories</item>
        <item>Account Details</item>
        <item>Log Out</item>
    </string-array>
    <string name="create_activity_title">Activity Title</string>
    <string name="create_activity_description">Activity Description</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="create_activity_btn">Create Activity</string>
    <string-array name="categories">
        <item>Select Category</item>
        <item>Parks and Nature</item>
        <item>Other activities</item>
    </string-array>
</resources>