<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ThemeOverlay.AppCompat.Dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Register"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_vertical">

    <EditText

        android:id="@+id/reg_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reg_first_name"
        android:minWidth="200dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"

        >
    </EditText>
    <EditText
        android:id="@+id/reg_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/reg_last_name">
    </EditText>
    <EditText
        android:id="@+id/reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reg_email"
        android:minWidth="200dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/reg_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reg_confirm_email"
        android:minWidth="200dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reg_password"
        android:minWidth="200dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/reg_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reg_confirm_password"
        android:minWidth="200dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

        <Button
            android:id="@+id/reg_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_button"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_corners"/>

</LinearLayout>
</LinearLayout>