<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
<include
    android:id="@+id/login_toolbar"
    layout="@layout/custom_toolbar">
</include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">
    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:minWidth="200dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:hint="@string/reg_email"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/login_password"
        android:hint="@string/reg_password"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:minWidth="200dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:background="@drawable/round_corners"

            />
        <Button
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/fui_transparent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:layout_gravity="center_horizontal"
           />
        <LinearLayout
            android:id="@+id/login_anonymously"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corners"
            android:padding="5dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/anonymous"
                android:contentDescription="@string/login_anonymously" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login_anonymously"
                android:textColor="@color/black"
            />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>