<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <include layout="@layout/custom_toolbar"/>
    <TextView

        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:textSize="16dp"
        android:text="@string/choose"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="130dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/museums" />

                <TextView
                    android:padding="10dp"
                    android:shadowColor="@color/black"
                    android:shadowDy="4"
                    android:shadowDx="4"
                    android:shadowRadius="1"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/museums"
                    android:textSize="22dp" />
            </FrameLayout>

<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="130dp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/parks"
        android:scaleType="centerCrop"/>
            <TextView
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:shadowDy="4"
                android:shadowDx="4"
                android:shadowRadius="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parks"
                android:textSize="22dp"/>
</FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="130dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/attractions"/>
            <TextView
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:shadowDy="4"
                android:shadowDx="4"
                android:shadowRadius="1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attractions"
                android:textSize="22dp"
                />
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="130dp"

                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/other"/>
            <TextView
                android:padding="10dp"
                android:shadowDy="4"
                android:shadowDx="4"
                android:shadowRadius="1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_activities"
                android:textSize="22dp"/>
            </FrameLayout>

        </LinearLayout>
</LinearLayout>