<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:id="@+id/home_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />
        <ImageView
            android:id="@+id/create_review_img"
            android:layout_gravity="center_horizontal"
            android:layout_width="350dp"
            android:layout_height="250dp"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/create_review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_review_stars"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/create_review_star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_border_24"/>
            <ImageView
                android:id="@+id/create_review_star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_border_24"/>
            <ImageView
                android:id="@+id/create_review_star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_border_24"/>
            <ImageView
                android:id="@+id/create_review_star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_border_24"/>
            <ImageView
                android:id="@+id/create_review_star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_border_24"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/black"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_review"/>
            <EditText
                android:id="@+id/create_review_description"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine"
                android:background="@color/colorAccent"/>
        </LinearLayout>
        <Button
            android:id="@+id/submit_review"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>